<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListExampleApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnAddLabel">Add New Item</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="title_activity_image_detail">ImageDetail</string>
    <string name="help">help</string>
    <string name="more_help">more help</string>
    <string name="even_more_help">even more help</string>
    <string name="give_up">give up</string>

</resources>
