<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/help"
          android:title="@string/help"
          android:showAsAction="always"/>
    <item android:id="@+id/more_help"
          android:title="@string/more_help"
          android:showAsAction="always" />
    <item
        android:id="@+id/even_more_help"
        android:title="@string/even_more_help"
        android:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/give_up"
                android:title="@string/give_up"/>
        </menu>

    </item>
</menu>
